--- a/index.html
+++ b/index.html
@@ -1,65 +1,100 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh">
 <head>
-  <meta charset="UTF-8" />
-  <title>于秋时的作品集</title>
-  <style>
-    body {
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 0 20px;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-    h1, h2 {
-      color: #2c3e50;
-    }
-    ul {
-      list-style-type: none;
-      padding-left: 0;
-    }
-    ul li {
-      background: #ecf0f1;
-      margin: 8px 0;
-      padding: 12px 16px;
-      border-radius: 6px;
-      transition: background-color 0.3s ease;
-    }
-    ul li:hover {
-      background: #d1d8e0;
-    }
-    a {
-      color: #2980b9;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    footer {
-      margin-top: 40px;
-      font-size: 0.9em;
-      color: #777;
-      border-top: 1px solid #ccc;
-      padding-top: 12px;
-      text-align: center;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>我的作品集</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f8f9fa;
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
+        header {
+            background: #0078d7;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            margin: 0;
+        }
+        #projects {
+            max-width: 900px;
+            margin: auto;
+            padding: 20px;
+        }
+        .project {
+            background: white;
+            padding: 15px;
+            margin: 10px 0;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            transition: transform 0.2s;
+        }
+        .project:hover {
+            transform: translateY(-2px);
+        }
+        a {
+            color: #0078d7;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        footer {
+            text-align: center;
+            padding: 15px;
+            background: #f1f1f1;
+            margin-top: 20px;
+            font-size: 14px;
+        }
+    </style>
 </head>
 <body>
-  <h1>欢迎来到于秋时的作品集</h1>
-  <p>计算机软件开发专业学生，热爱Python编程。</p >
+    <header>
+        <h1>我的作品集</h1>
+        <p>自动展示我的 GitHub 项目</p >
+    </header>
 
-  <h2>项目展示</h2>
-  <ul>
-    <li><a href=" " target="_blank">猜数字游戏</a > — Python小游戏，包含挑战和范围提示</li>
-    <li><a href="https://github.com/yuqiushi124/FruitManager" target="_blank">水果管理系统</a > — 实现增删改查功能并支持文件持久化</li>
-    <!-- 更多项目可以继续添加 -->
-  </ul>
+    <section id="projects">
+        <p>加载中...</p >
+    </section>
 
-  <footer>
-    <p>联系方式：3495702460@qq.com</p >
-  </footer>
+    <footer>
+        <p>联系我：3495702460@qq.com</p >
+    </footer>
+
+    <script>
+        const username = "yuqiushi124"; // ← 改成你的用户名
+        const projectContainer = document.getElementById("projects");
+
+        async function loadProjects() {
+            try {
+                const response = await fetch(`https://api.github.com/users/${username}/repos?sort=updated`);
+                const repos = await response.json();
+
+                projectContainer.innerHTML = "";
+
+                repos.forEach(repo => {
+                    // 忽略 fork 的项目
+                    if (repo.fork) return;
+
+                    const project = document.createElement("div");
+                    project.className = "project";
+                    project.innerHTML = `
+                        <h2><a href=" " target="_blank">${repo.name}</a ></h2>
+                        <p>${repo.description || "这个项目没有描述。"}</p >
+                        <p>最后更新：${new Date(repo.updated_at).toLocaleDateString()}</p >
+                    `;
+                    projectContainer.appendChild(project);
+                });
+            } catch (error) {
+                projectContainer.innerHTML = "<p>加载失败，请稍后再试。</p >";
+            }
+        }
+
+        loadProjects();
+    </script>
 </body>
 </html>
